--- a/es/diagrama-de-gantt.html
+++ b/es/diagrama-de-gantt.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>	
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Diagrama de Gantt automático en Workep</title>
+    <title>Diagrama de Gantt automático: planea, asigna y comparte con Workep</title>
+    <meta name="description" content="Colabore con su equipo externo a la distancia de un clic,  comparta sus tableros con personas externas a su compañía teniendo el panorama 360° del equipo.">  
+    <link rel="canonical" url="https://workep.com/es/diagrama-de-gantt.html">  
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
@@ -148,7 +150,7 @@
   </div>
 
 </div>
- <footer class="main_footer">
+<footer class="main_footer">
     <div class="foot_top">
       <div class="container">
         <div class="foot_top_row">
@@ -176,9 +178,9 @@
             <ul class="links_all">
                 <li><a href="https://workep.com/es/time-tracker.html">Time traker</a></li>
                 <li><a href="https://workep.com/es/budget-tracker.html">Budget Traker</a></li>
-                <li><a href="https://workep.com/es/external-collaboration.html">External Collaboration</a></li>
-                <li><a href="https://workep.com/es/gantt-chart.html">Gantt Chart</a></li>
-                <li><a href="https://workep.com/es/gmail-add-on.html">Gmail Ad-on</a></li>
+                <li><a href="https://workep.com/es/colaboracion-externa.html">External Collaboration</a></li>
+                <li><a href="https://workep.com/es/diagrama-de-gantt.html">Diagrama de Gantt</a></li>
+                <li><a href="https://workep.com/es/plugin-gmail.html">Gmail Ad-on</a></li>
             </ul>
           </div>
           <div class="foot3">
@@ -191,15 +193,15 @@
             </ul>
             <h4>Competidores</h4>
             <ul class="links_all">
-                <li><a href="https://workep.com/es/competitors-airtable.html">Airtable</a></li>
-                <li><a href="https://workep.com/es/competitors-asana.html">Asana</a></li>
-                <li><a href="https://workep.com/es/competitors-basecamp.html">Basecamp</a></li>
-                <li><a href="https://workep.com/es/competitors-jira.html">Jira</a></li>
-                <li><a href="https://workep.com/es/competitors-monday.html">Monday</a></li>
-                <li><a href="https://workep.com/es/competitors-notion.html">Notion</a></li>
-                <li><a href="https://workep.com/es/competitors-smartsheet.html">Smartsheet</a></li>
-                <li><a href="https://workep.com/es/competitors-trello.html">Trello</a></li>
-                <li><a href="https://workep.com/es/competitors-wrike.html">Wrike</a></li>
+                <li><a href="https://workep.com/es/competidor-airtable.html">Airtable</a></li>
+                <li><a href="https://workep.com/es/competidor-asana.html">Asana</a></li>
+                <li><a href="https://workep.com/es/competidor-basecamp.html">Basecamp</a></li>
+                <li><a href="https://workep.com/es/competidor-jira.html">Jira</a></li>
+                <li><a href="https://workep.com/es/competidor-monday.html">Monday</a></li>
+                <li><a href="https://workep.com/es/competidor-notion.html">Notion</a></li>
+                <li><a href="https://workep.com/es/competidor-smartsheet.html">Smartsheet</a></li>
+                <li><a href="https://workep.com/es/competidor-trello.html">Trello</a></li>
+                <li><a href="https://workep.com/es/competidor-wrike.html">Wrike</a></li>
             </ul>  
           </div>
           <div class="foot4">
@@ -219,11 +221,12 @@
               <h4>Industrias</h4>
             <ul class="links_all">
                 <li><a href="https://workep.com/es/startups.html">Startup</a></li>
-                <li><a href="https://workep.com/es/law-firms.html">Firmas de abogados</a></li>
-                <li><a href="https://workep.com/es/software-dev.html">Compañías de software</a></li>
-                <li><a href="https://workep.com/es/consulting.html">Servicios profesionales</a></li>
+                <li><a href="https://workep.com/es/firmas-de-abogados.html">Firmas de abogados</a></li>
+                <li><a href="https://workep.com/es/desarrollo-de-software.html">Compañías de software</a></li>
+                <li><a href="https://workep.com/es/consultoria.html">Servicios profesionales</a></li>
                 <li><a href="https://workep.com/es/marketing.html">Marketing y creatividad</a></li>
             </ul>
+          </div>
           </div>
           <div class="foot5">
             <h4>Contacto</h4>
@@ -234,7 +237,6 @@
           </div>
         </div>
       </div>
-    </div>
     <div class="foot_bot">
       <div class="container">
         <div class="foot_bot_row">
@@ -256,7 +258,6 @@
               <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="../images/ins.svg" alt="workep instagram"></a></li>
             </ul>
           </div>
-
           <div class="app_storelink">
             <ul>
               <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="../images/google_play.png" alt="workep android"></a></li>
