--- a/es/plugin-gmail.html
+++ b/es/plugin-gmail.html
@@ -4,9 +4,11 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Colaboración externa en Workep</title>
+    <title>Gmail completamente integrado con Workep, de forma nativa a su tablero</title>
+    <meta name="description" content="Workep se integra con Gmail de forma nativa, cree tareas asígnelas y Workep se encargará de notificar vía Gmail a los usuarios asignados. Conozca más aquí">  
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
+    <link rel="canonical" url="https://workep.com/es/plugin-gmail.html">    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/easy-responsive-tabs.css">
     <link rel="stylesheet" href="../css/animate.css">
@@ -20,10 +22,6 @@
     <link rel="stylesheet" href="../css/style.competitors.css">
   </head>
 <body>
-    
-
-
-
 <header class="main_head no-bg">
       <div class="container">
         <nav class="navbar navbar-expand-lg">
@@ -40,15 +38,15 @@
 </header>
 
 
-<div class="external_collaboration_banner">
+<div class="gmail_add-on_banner">
     <div class="container time_tracker_content">
       <div class="time_tracker_contentbox">
-        <h1>Colaboración externa <br>a un sólo clic</h1>
-        <h3>Comparta proyectos con cualquier persona fuera de su equipo, <u>no es necesario registrarse.</u></h3>
+        <h1>Tus tareas <br>de Gmail a tu alcance</h1>
+        <h3>Cree tareas directamente desde Gmail <u>para ahorrar tiempo.</u></h3>
       </div>
     </div>
     <div class="container time_tracker_img">
-      <figure><img src="../images/external-collab-banim.png" alt="externa collab"></figure>
+      <figure><img src="../images/gmai_adds_on-banim.png" alt="Gmail Adds on"></figure>
     </div>
 </div>
 
@@ -67,48 +65,44 @@
             <br>
             <br>
         </div>
-          <p>Comparta tareas individuales o proyectos completos con colaboradores externos. Cambia los permisos para que puedan editar, comentar o solo ver lo que eliges compartir.</p>
         <div class="time_tracking_step">
           <div class="row">
             <div class="col-md-4">
               <div class="time_tracking_step_box">
                 <figure>
-                  <img src="../images/f6-c.png" alt="">
+                  <img src="../images/create%20task.png" alt="create task">
                 </figure>
-                <h4>habilite tableros</h4>
+                <h4>Crea tareas</h4>
               </div>
             </div>
             <div class="col-md-4">
               <div class="time_tracking_step_box">
                 <figure>
-                  <img src="../images/advancedreports_collaboration.png" alt="Colaboración avanzada">
+                  <img src="../images/asign%20it.png" alt="asign it">
                 </figure>
-                <h4>Comparta permisos</h4>
+                <h4>Asignalas</h4>
               </div>
             </div>
             <div class="col-md-4">
               <div class="time_tracking_step_box">
                 <figure>
-                  <img src="../images/share_the_links.png" alt="">
+                  <img src="../images/f6-c.png" alt="save it">
                 </figure>
-                <h4>Comparte el enlace</h4>
+                <h4>Ahorra tiempo</h4>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-<!--<div class="time_tracker_feature">
+       <!--<div class="time_tracker_feature">
           <div class="time_tracker_feature_block">
             <div class="row">
               <div class="col-lg-6 time_tracker_feature_img">
                 <figure>
-                  <img src="../images/share_onclic.gif" alt="timer Workep">
+                  <img src="../images/time_t_im1.png" alt="">
                 </figure>
               </div>
               <div class="col-lg-6 time_tracker_feature_content">
-                <p>Active la colaboración externa con solo un clic para compartir cualquier cosa con colaboradores externos fuera de su equipo. Ni siquiera necesitan inscribirse en Workep.</p>
+                <p>No necesita perder el tiempo copiando el contenido de un correo electrónico en una tarea en Workep. Hazlo automáticamente desde Gmail.</p>
               </div>
             </div>
           </div>
@@ -116,11 +110,11 @@
             <div class="row">
               <div class="col-lg-6 time_tracker_feature_img">
                 <figure>
-                  <img src="../images/share_onclic.gif" alt="timer Workep">
+                  <img src="../images/time_t_im2.png" alt="">
                 </figure>
               </div>
               <div class="col-lg-6 time_tracker_feature_content">
-                <p>Los colaboradores externos podrán ver los detalles de las tareas como usted, pero depende de usted si pueden comentar o editar tareas también.</p>
+                <p>Convierta un correo electrónico en su bandeja de entrada de Gmail en una tarea en Workep para proporcionar al cesionario toda la información que necesita para realizar el trabajo.</p>
               </div>
             </div>
           </div>
@@ -128,26 +122,37 @@
             <div class="row">
               <div class="col-lg-6 time_tracker_feature_img">
                 <figure>
-                  <img src="../images/share_onclic.gif" alt="timer Workep">
+                  <img src="../images/time_t_im3.png" alt="">
                 </figure>
               </div>
               <div class="col-lg-6 time_tracker_feature_content">
-                <p>Copie el enlace y envíelo a quien quiera. Cualquier persona con el enlace puede verlo, pero puede desactivar el uso compartido o cambiar los permisos en cualquier momento.</p>
+                <p>No más búsquedas en sus correos electrónicos para encontrar la información que necesita para completar una tarea. Vea lo que necesita, cuando lo necesita en Workep.</p>
               </div>
             </div>
           </div>
         </div>-->
+      </div>
+    </div>
+  </div>
+
+  
+
+
+
+
+
   <div class="twobutton_sec common_gap">
     <div class="container">
-      <h2>¿Quieres saber más sobre la colaboración en Workep<i><img src="../images/vshs.png" alt="saber más sobre time traker"></i></h2>
+      <h2>¿Quieres saber más sobre la integración con Gmail?<i><img src="../images/vshs.png" alt="Integración Gmail"></i></h2>
       <ul class="twobutton_sec_bot">
-        <li><a href="https://projectmanagement.workep.com/contact-sales" class="bluebtn_link">OBTENER MÁS INFORMACIÓN</a></li>
-        <li><a href="https://projectmanagement.workep.com/request-demo" class="bluebtn_link">SOLICITAR UN DEMO</a></li>
+        <li><a href="https://projectmanagement.workep.com/contact-sales" class="bluebtn_link">OBTENGA MÁS INFORMACIÓN</a></li>
+        <li><a href="https://projectmanagement.workep.com/request-demo" class="bluebtn_link">SOLICITE UN DEMO</a></li>
       </ul>
     </div>
   </div>
+
 </div>
- <footer class="main_footer">
+<footer class="main_footer">
     <div class="foot_top">
       <div class="container">
         <div class="foot_top_row">
@@ -175,9 +180,9 @@
             <ul class="links_all">
                 <li><a href="https://workep.com/es/time-tracker.html">Time traker</a></li>
                 <li><a href="https://workep.com/es/budget-tracker.html">Budget Traker</a></li>
-                <li><a href="https://workep.com/es/external-collaboration.html">External Collaboration</a></li>
-                <li><a href="https://workep.com/es/gantt-chart.html">Gantt Chart</a></li>
-                <li><a href="https://workep.com/es/gmail-add-on.html">Gmail Ad-on</a></li>
+                <li><a href="https://workep.com/es/colaboracion-externa.html">External Collaboration</a></li>
+                <li><a href="https://workep.com/es/diagrama-de-gantt.html">Diagrama de Gantt</a></li>
+                <li><a href="https://workep.com/es/plugin-gmail.html">Gmail Ad-on</a></li>
             </ul>
           </div>
           <div class="foot3">
@@ -190,15 +195,15 @@
             </ul>
             <h4>Competidores</h4>
             <ul class="links_all">
-                <li><a href="https://workep.com/es/competitors-airtable.html">Airtable</a></li>
-                <li><a href="https://workep.com/es/competitors-asana.html">Asana</a></li>
-                <li><a href="https://workep.com/es/competitors-basecamp.html">Basecamp</a></li>
-                <li><a href="https://workep.com/es/competitors-jira.html">Jira</a></li>
-                <li><a href="https://workep.com/es/competitors-monday.html">Monday</a></li>
-                <li><a href="https://workep.com/es/competitors-notion.html">Notion</a></li>
-                <li><a href="https://workep.com/es/competitors-smartsheet.html">Smartsheet</a></li>
-                <li><a href="https://workep.com/es/competitors-trello.html">Trello</a></li>
-                <li><a href="https://workep.com/es/competitors-wrike.html">Wrike</a></li>
+                <li><a href="https://workep.com/es/competidor-airtable.html">Airtable</a></li>
+                <li><a href="https://workep.com/es/competidor-asana.html">Asana</a></li>
+                <li><a href="https://workep.com/es/competidor-basecamp.html">Basecamp</a></li>
+                <li><a href="https://workep.com/es/competidor-jira.html">Jira</a></li>
+                <li><a href="https://workep.com/es/competidor-monday.html">Monday</a></li>
+                <li><a href="https://workep.com/es/competidor-notion.html">Notion</a></li>
+                <li><a href="https://workep.com/es/competidor-smartsheet.html">Smartsheet</a></li>
+                <li><a href="https://workep.com/es/competidor-trello.html">Trello</a></li>
+                <li><a href="https://workep.com/es/competidor-wrike.html">Wrike</a></li>
             </ul>  
           </div>
           <div class="foot4">
@@ -218,11 +223,12 @@
               <h4>Industrias</h4>
             <ul class="links_all">
                 <li><a href="https://workep.com/es/startups.html">Startup</a></li>
-                <li><a href="https://workep.com/es/law-firms.html">Firmas de abogados</a></li>
-                <li><a href="https://workep.com/es/software-dev.html">Compañías de software</a></li>
-                <li><a href="https://workep.com/es/consulting.html">Servicios profesionales</a></li>
+                <li><a href="https://workep.com/es/firmas-de-abogados.html">Firmas de abogados</a></li>
+                <li><a href="https://workep.com/es/desarrollo-de-software.html">Compañías de software</a></li>
+                <li><a href="https://workep.com/es/consultoria.html">Servicios profesionales</a></li>
                 <li><a href="https://workep.com/es/marketing.html">Marketing y creatividad</a></li>
             </ul>
+          </div>
           </div>
           <div class="foot5">
             <h4>Contacto</h4>
@@ -233,7 +239,6 @@
           </div>
         </div>
       </div>
-    </div>
     <div class="foot_bot">
       <div class="container">
         <div class="foot_bot_row">
@@ -255,7 +260,6 @@
               <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="../images/ins.svg" alt="workep instagram"></a></li>
             </ul>
           </div>
-
           <div class="app_storelink">
             <ul>
               <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="../images/google_play.png" alt="workep android"></a></li>
