Cahnge in the text video
change in the text.

--- a/es/competidor-basecamp.html
+++ b/es/competidor-basecamp.html
@@ -48,7 +48,7 @@
           </div>
           <div class="competitor-sec1-form">
             <div class="competitor-sec1-formL">
-              <p><strong>Workep</strong> es una solución de gestión de proyectos completa, personalizable e integrada con G Suite, a diferencia de Basecamp, que es una aplicación de gestión de tareas con una única forma de trabajar.</p>
+              <p><strong>Workep</strong> es una solución de gestión de proyectos completa, personalizable e integrada con G Suite, a diferencia de Basecamp que es una aplicación de gestión de tareas con una única forma de trabajar.</p>
               <figure>
                 <img src="../images/comp-z.png" alt="Multi apps">
               </figure>
@@ -257,7 +257,7 @@
                 <figure>
                   <img src="../images/workep-logonew2.png" alt="new logo workep">
                 </figure>
-                <p><strong>Workep</strong> le permite monitorear proyectos completos utilizando diferentes metodologías, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic.</p>
+                <p><strong>Workep</strong> tiene una interfaz de usuario simple y una curva de aprendizaje súper rápida para todo su equipo además de una integración con G Suite, potentes funciones en la aplicación y colaboración externa con un solo clic.</p>
               </div>
 
               <div class="diff-approach-box">
@@ -590,7 +590,7 @@
                 <figure>
                   <img src="../images/pink-girl.png" alt="">
                 </figure>
-                <h2>Comience a colaborar más rápido, más fácilmente y con cualquier persona, en cualquier lugar.</h2>
+                <h2>Comience a colaborar más rápido, más fácilmente y con cualquier persona en cualquier lugar.</h2>
               </div>
               <div class="col-lg-6 start-collaborating-fast-rt">
                 <div class="competitor-form-box">
