--- a/es/competidor-monday.html
+++ b/es/competidor-monday.html
@@ -4,8 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Workep porque es mejor que el lunes ¡descúbrelo aquí!</title>
-    <meta name="description" content="Descubra por qué Workep supera la funcionalidad de Jira con un software totalmente integrado con G-Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic">  
+    <title>Workep porque es mejor que Monday ¡descúbrelo aquí!</title>
+    <meta name="description" content="Descubra por qué Workep supera la funcionalidad de Monday con un software totalmente integrado con G-Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic">  
 <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
       <link rel="canonical" url="https://workep.com/es/competidor-jira.html">  
@@ -260,7 +260,7 @@
                 <figure>
                   <img src="../images/workep-logonew.png" alt="Workep logo">
                 </figure>
-                <p><strong>Workep</strong> le permite visualizar y personalizar proyectos, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic.</p>
+               <p><strong>Workep</strong> tiene una interfaz de usuario simple y una curva de aprendizaje súper rápida para todo su equipo además de una integración con G Suite, potentes funciones en la aplicación y colaboración externa con un solo clic.</p>
               </div>
 
               <div class="diff-approach-box">
@@ -590,7 +590,7 @@
                 <figure>
                   <img src="../images/pink-girl.png" alt="Pink girl Workep">
                 </figure>
-                <h2>Comience a colaborar más rápido, más fácilmente y con cualquier persona, en cualquier lugar.</h2>
+                <h2>Comience a colaborar más rápido, más fácilmente y con cualquier persona en cualquier lugar.</h2>
               </div>
               <div class="col-lg-6 start-collaborating-fast-rt">
                 <div class="competitor-form-box">
