--- a/es/competidor-notion.html
+++ b/es/competidor-notion.html
@@ -84,7 +84,7 @@
     <div class="difference-competitors common_gap">
       <div class="container">
             <div class="section_title">
-              <h2>¿Cuáles son las diferencias entre Workep y la noción?</h2>
+              <h2>¿Cuáles son las diferencias entre Workep y Notion?</h2>
             </div>
 
             <div class="foundation_sec_slider foundation_sec_slider_new">
@@ -262,7 +262,7 @@
                 <figure>
                   <img src="../images/workep-logonew.png" alt="Workep Logo">
                 </figure>
-                <p><strong>Workep</strong> no solo le permite crear tareas, sino también seguir proyectos en su conjunto, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic.</p>
+                <p><strong>Workep</strong> tiene una interfaz de usuario simple y una curva de aprendizaje súper rápida para todo su equipo además de una integración con G Suite, potentes funciones en la aplicación y colaboración externa con un solo clic.</p>
               </div>
 
               <div class="diff-approach-box">
@@ -595,7 +595,7 @@
                 <figure>
                   <img src="../images/pink-girl.png" alt="Workep Pink girl #2">
                 </figure>
-                <h2>Comience a colaborar más rápido, más fácilmente y con cualquier persona, en cualquier lugar.</h2>
+                <h2>Comience a colaborar más rápido, más fácilmente y con cualquier persona en cualquier lugar.</h2>
               </div>
               <div class="col-lg-6 start-collaborating-fast-rt">
                 <div class="competitor-form-box">
