--- a/es/competidor-smartsheet.html
+++ b/es/competidor-smartsheet.html
@@ -264,7 +264,7 @@
                 <figure>
                   <img src="../images/workep-logonew.png" alt="Workep Long logo">
                 </figure>
-                <p><strong>Workep</strong> le da al gerente de proyecto un control más completo sobre el proyecto, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic.</p>
+               <p><strong>Workep</strong> tiene una interfaz de usuario simple y una curva de aprendizaje súper rápida para todo su equipo además de una integración con G Suite, potentes funciones en la aplicación y colaboración externa con un solo clic.</p>
               </div>
 
               <div class="diff-approach-box">
@@ -604,7 +604,7 @@
                 <figure>
                   <img src="../images/pink-girl.png" alt="Pink Girl Workep">
                 </figure>
-                <h2>Comience a colaborar más rápido, más fácilmente y con cualquier persona, en cualquier lugar.</h2>
+                <h2>Comience a colaborar más rápido, más fácilmente y con cualquier persona en cualquier lugar.</h2>
               </div>
               <div class="col-lg-6 start-collaborating-fast-rt">
                 <div class="competitor-form-box">
