--- a/es/competidor-trello.html
+++ b/es/competidor-trello.html
@@ -258,7 +258,7 @@
                 <figure>
                   <img src="../images/workep-logonew.png" alt="Workep Logo">
                 </figure>
-                <p><strong>Workep</strong> le da al gerente de proyecto un control más completo sobre el proyecto, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic.</p>
+                <p><strong>Workep</strong> tiene una interfaz de usuario simple y una curva de aprendizaje súper rápida para todo su equipo además de una integración con G Suite, potentes funciones en la aplicación y colaboración externa con un solo clic.</p>
               </div>
 
               <div class="diff-approach-box">
@@ -286,7 +286,7 @@
    <div class="external-collab common_gap">
       <div class="container">
           <div class="section_title">
-            <h2>The power of our external collaboration </h2>
+            <h2>El poder de nuestra colaboración externa.</h2>
             <p>Este es nuestro Gantt en el modo compartido, puede ver nuestra hoja de ruta aquí ;)</p>
           </div>
 
@@ -504,12 +504,12 @@
                       <td class="featurein-compi"><span class="available"></span></td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Google Calendar Nativo</td>
+                      <td class="featuretd">Google Calendar nativo</td>
                       <td class="featurein-workep"><span class="available"></span></td>
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Google Drive Nativo</td>
+                      <td class="featuretd">Google Drive nativo</td>
                       <td class="featurein-workep"><span class="available"></span></td>
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
@@ -519,7 +519,7 @@
                       <td class="featurein-compi"><span class="available"></span></td>
                     </tr>
                     <tr>
-                      <td class="featuretd">Tareas de Gmail iintegradas</td>
+                      <td class="featuretd">Tareas de Gmail integradas</td>
                       <td class="featurein-workep"><span class="available"></span></td>
                       <td class="featurein-compi"><span class="not-available"></span></td>
                     </tr>
@@ -593,7 +593,7 @@
                 <figure>
                   <img src="../images/pink-girl.png" alt="Workep Pink Girl">
                 </figure>
-                <h2>Comience a colaborar más rápido, más fácilmente y con cualquier persona, en cualquier lugar.</h2>
+                <h2>Comience a colaborar más rápido, más fácilmente y con cualquier persona en cualquier lugar.</h2>
               </div>
               <div class="col-lg-6 start-collaborating-fast-rt">
                 <div class="competitor-form-box">
