--- a/es/consultoria.html
+++ b/es/consultoria.html
@@ -322,7 +322,7 @@
 
   <div class="twobutton_sec common_gap twobutton_sec_marketing">
     <div class="container">
-      <h3>G Suite Integration, Powerful In-App Features, and Easy External <br>Collaboration for All Your Consulting and Creative Projects.<i><img src="images/vshs.png" alt=""></i></h3>
+      <h3>Integración de G Suite, potentes funciones en la aplicación y fácil colaboración externa para todos sus proyectos creativos y de consultoría.<i><img src="images/vshs.png" alt=""></i></h3>
       <ul class="twobutton_sec_bot">
         <li><a href="#url" class="bluebtn_link">ACTIVA UNA PRUEBA GRATUITA DE 15 DÍAS</a></li>
         <li><a href="#url" class="bluebtn_link">SOLICITE UNA DEMO HOY</a></li>
