--- a/es/desarrollo-de-software.html
+++ b/es/desarrollo-de-software.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Workep es la herramienta que su compañía de desarrollo necesita</title>
+    <title>Workep es la herramienta que su compañía de desarrollo de software necesita</title>
     <meta name="description" content="Descubra porque Workep es la mejor respuesta, para ser más productivo y eficiente en su trabajo. Y es lo que su casa de desarrollo necesita, obtenga más información aquí ">
      <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">  
@@ -326,7 +326,7 @@
 
   <div class="twobutton_sec common_gap twobutton_sec_marketing">
     <div class="container">
-      <h3>G Suite Integration, Powerful In-App Features, and Easy External <br>Collaboration for All Your Software Developer and Creative Projects.<i><img src="../images/vshs.png" alt=""></i></h3>
+      <h3>Integración de G Suite, potentes funciones en la aplicación y fácil externo Colaboración para todos sus desarrolladores de software y proyectos creativos.<i><img src="../images/vshs.png" alt="G suite integration"></i></h3>
       <ul class="twobutton_sec_bot">
         <li><a href="#url" class="bluebtn_link">ACTIVA UNA PRUEBA GRATUITA DE 15 DÍAS</a></li>
         <li><a href="#url" class="bluebtn_link">SOLICITE UNA DEMO HOY</a></li>
