--- a/es/competidor-airtable.html
+++ b/es/competidor-airtable.html
@@ -266,7 +266,7 @@
                 <figure>
                   <img src="../images/workep-logonew.png" alt="logo workep">
                 </figure>
-                  <p><strong>Workep</strong> tiene una interfaz de usuario simple y una curva de aprendizaje súper rápida para todo su equipo, junto con la integración de G Suite, potentes funciones en la aplicación y colaboración externa con un solo clic.</p>
+                  <p><strong>Workep</strong> tiene una interfaz de usuario simple y una curva de aprendizaje súper rápida para todo su equipo además de una integración con G Suite, potentes funciones en la aplicación y colaboración externa con un solo clic.</p>
               </div>
 
               <div class="diff-approach-box">
@@ -590,7 +590,7 @@
                 <figure>
                   <img src="../images/pink-girl.png" alt="Pink girl workep">
                 </figure>
-                <h2>Comience a colaborar más rápido, más fácilmente y con cualquier persona, en cualquier lugar.</h2>
+                <h2>Comience a colaborar más rápido, más fácilmente y con cualquier persona en cualquier lugar.</h2>
               </div>
               <div class="col-lg-6 start-collaborating-fast-rt">
                 <div class="competitor-form-box">
