--- a/es/competidor-jira.html
+++ b/es/competidor-jira.html
@@ -261,7 +261,7 @@
                 <figure>
                   <img src="../images/workep-logonew.png" alt="workep logo">
                 </figure>
-                <p><strong>Workep</strong> le permite elegir entre metodologías de gestión de proyectos, junto con la integración de G Suite, potentes funciones integradas en la aplicación y colaboración externa con un solo clic.</p>
+                <p><strong>Workep</strong> tiene una interfaz de usuario simple y una curva de aprendizaje súper rápida para todo su equipo además de una integración con G Suite, potentes funciones en la aplicación y colaboración externa con un solo clic.</p>
               </div>
 
               <div class="diff-approach-box">
@@ -588,7 +588,7 @@
                 <figure>
                   <img src="../images/pink-girl.png" alt="PInk girl workep">
                 </figure>
-                <h2>Comience a colaborar más rápido, más fácilmente y con cualquier persona, en cualquier lugar.</h2>
+                <h2>Comience a colaborar más rápido, más fácilmente y con cualquier persona en cualquier lugar.</h2>
               </div>
               <div class="col-lg-6 start-collaborating-fast-rt">
                 <div class="competitor-form-box">
