--- a/es/diagrama-de-gantt.html
+++ b/es/diagrama-de-gantt.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Diagrama de Gantt automático: planea, asigna y comparte con Workep</title>
-    <meta name="description" content="Colabore con su equipo externo a la distancia de un clic,  comparta sus tableros con personas externas a su compañía teniendo el panorama 360° del equipo.">  
+    <meta name="description" content="utiliza el diagrama de Grantt para impulsar tus proyectos de forma rentable">  
     <link rel="canonical" url="https://workep.com/es/diagrama-de-gantt.html">  
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
