--- a/es/startups.html
+++ b/es/startups.html
@@ -250,7 +250,7 @@
               <div  class="col-lg-7 marketing_content_blocks_video">
                 <div class="marketing_content_blocks_videoframe">
                   <video autoplay="" loop="">
-                    <source src="../video/Industry3.webm" type="video/webm">
+                    <source src="../video/industry3.webm" type="video/webm">
                   </video>
                 </div>
               </div>
